resources/constraints/block_host_network.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDisallowHostNetwork
metadata:
  name: disallow-host-network
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    excludedNamespaces: [
      "amazon-guardduty",
      "kube-system",
      "logging",
      "monitoring",
      "tigera-operator"
      ]
