resources/constraints/user_ns_requires_psa_label.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  name: user-ns-require-psa-label
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Namespace"]
    excludedNamespaces: [
      "argocd",
      "cert-manager",
      "gatekeeper-system",
      "kube-system",
      "kube-node-lease",
      "kube-public",
      "default",
      "logging",
      "monitoring",
      "smoketest-psp-*",
      "smoketest-psa-*",
      "trivy-system",
      "amazon-guardduty",
      "envoy-gateway-system",
      "opentelemetry-operator-system",
      "amazon-cloudwatch"
      ]
  parameters:
    message: "All user namespaces must have a `pod-security.kubernetes.io/enforce: restricted` label."
    labels:
    - key: pod-security.kubernetes.io/enforce
      allowedRegex: restricted
